
message ( "OpenAL-Soft - Begin" )

set(ALSOFT_UTILS OFF CACHE BOOL "Build and install utility programs" FORCE)
set(ALSOFT_EXAMPLES OFF CACHE BOOL "Build and install example programs" FORCE)
set(ALSOFT_TESTS OFF CACHE BOOL "Enable unit tests for OpenAL-Soft" FORCE)
set(ALSOFT_INSTALL OFF CACHE BOOL "Install OpenAL-Soft headers and libraries" FORCE)

set(LIBTYPE "STATIC")

add_subdirectory ( openalsoft )

mark_as_advanced( FORCE
    # Open AL soft options
    ALSOFT_WINE
    ALSOFT_AMBDEC_PRESETS
    ALSOFT_FORCE_STATIC_VCRT
    ALSOFT_CPUEXT_SSE
    ALSOFT_CPUEXT_NEON
    ALSOFT_CPUEXT_SSE2
    ALSOFT_CPUEXT_SSE3
    ALSOFT_CPUEXT_SSE4_1

    ALSOFT_BACKEND_ALSA
    ALSOFT_BACKEND_OSS
    ALSOFT_BACKEND_SOLARIS
    ALSOFT_BACKEND_SNDIO
    ALSOFT_BACKEND_MMDEVAPI
    ALSOFT_BACKEND_DSOUND
    ALSOFT_BACKEND_WINMM
    ALSOFT_BACKEND_PORTAUDIO
    ALSOFT_BACKEND_PULSEAUDIO
    ALSOFT_BACKEND_COREAUDIO
    ALSOFT_BACKEND_OPENSL
    ALSOFT_BACKEND_WAVE
    ALSOFT_BACKEND_QSA
    ALSOFT_BACKEND_WASAPI

    ALSOFT_REQUIRE_ALSA
    ALSOFT_REQUIRE_OSS
    ALSOFT_REQUIRE_SOLARIS
    ALSOFT_REQUIRE_SNDIO
    ALSOFT_REQUIRE_MMDEVAPI
    ALSOFT_REQUIRE_DSOUND
    ALSOFT_REQUIRE_WINMM
    ALSOFT_REQUIRE_PORTAUDIO
    ALSOFT_REQUIRE_PULSEAUDIO
    ALSOFT_REQUIRE_COREAUDIO
    ALSOFT_REQUIRE_OPENSL
    ALSOFT_REQUIRE_FLUIDSYNTH
    ALSOFT_REQUIRE_QSA
    ALSOFT_REQUIRE_JACK
    ALSOFT_REQUIRE_SDL2
    ALSOFT_REQUIRE_SSE
    ALSOFT_REQUIRE_SSE2
    ALSOFT_REQUIRE_SSE4_1
    ALSOFT_REQUIRE_NEON
    ALSOFT_REQUIRE_WASAPI

    ALSOFT_DLOPEN
    ALSOFT_WERROR
    ALSOFT_UTILS
    ALSOFT_EXAMPLES
    ALSOFT_CONFIG
    ALSOFT_TESTS
    ALSOFT_INSTALL
    ALSOFT_BUILD_ROUTER
    ALSOFT_BUILD_IMPORT_LIB
    ALSOFT_STATIC_LIBGCC

    ALSOFT_HRTF_DEFS
    ALSOFT_MIDI_FLUIDSYNTH
    ALSOFT_NO_CONFIG_UTIL
    ALSOFT_NO_UID_DEFS
    ALSOFT_EMBED_HRTF_DATA

    MINGW32_LIBRARY
    QT_QMAKE_EXECUTABLE
    SDLMAIN_LIBRARY
    SDL_INCLUDE_DIR
    SDL_LIBRARY_TEMP
    SDL2_INCLUDE_DIR
    SDL2_CORE_LIBRARY
    SDL2MAIN_LIBRARY
    SDL2_MAIN_LIBRARY
    COREAUDIO_FRAMEWORK

    D_PULSE_LIB _ALSA_LIB
)

message ("OpenAL-Soft - End")
